--- a/carta-del-ceo.html
+++ b/carta-del-ceo.html
@@ -61,17 +61,17 @@
     <section class="ceo-section">
         <div class="container">
             <div class="ceo-top">
-                <h3>Carta Gerente General Corporativo</h3>
-                <img src="assets/images/carta-del/person.png" alt="image" />
+                <h3 class="fade-in-up">Carta Gerente General Corporativo</h3>
+                <img class="fade-in-up" src="assets/images/carta-del/person.png" alt="image" />
             </div>
             <div class="ceo-bottom">
-                <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+                <p class="fade-in-up">Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
                     Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue
                     duis dolore te feugait nulla facilisi.</p>
-                <p>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                <p class="fade-in-up">Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
                     ut aliquip ex ea commodo consequat.</p>
-                <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat dore aretar.</h4>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                <h4 class="fade-in-up">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat dore aretar.</h4>
+                <p class="fade-in-up">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
                     ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
                     luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
                 </p>
@@ -89,12 +89,12 @@
                     <div class="swiper-slide">
                         <div class="stats-content">
                             <div>
-                                <h2 class="text-primary">34</h2>
+                                <h2 class="text-primary counts" data-number="34">0</h2>
                                 <h4 class="text-primary">Loren ipsum dolor sit mater admira</h4>
                                 <h5>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</h5>
                             </div>
                             <div>
-                                <h2>26.000</h2>
+                                <h2><span class="counts" data-number="26"></span>.000</h2>
                                 <h4>Loren ipsum dolor sit mater admira</h4>
                                 <h5>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</h5>
                             </div>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
             </div>
-            <div class="stats-bars">
+            <div class="stats-bars fade-in-up">
                 <img src="assets/images/svg/bars.svg" alt="icon" />
             </div>
         </div>
@@ -118,12 +118,12 @@
     <div class="left-align-section">
         <div class="container">
             <div class="left-content">
-                <p>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut <a class="text-primary" href="#">laoreet dolore magna</a>laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
+                <p class="fade-in-up">Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut <a class="text-primary" href="#">laoreet dolore magna</a>laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
                     nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                <p class="fade-in-up">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
                     ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
                     luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
-                <button class="btn btn-white btn-lg">Descargar PDF</button>
+                <button class="btn btn-white btn-lg fade-in-up">Descargar PDF</button>
             </div>
         </div>
     </div>
@@ -131,8 +131,8 @@
     <!-- More Section -->
     <div class="more-section">
         <div class="container">
-            <h3>conoce más sobre nuestras secciones</h3>
-            <div class="more-content">
+            <h3 class="fade-in-up">conoce más sobre nuestras secciones</h3>
+            <div class="more-content fade-in-up">
                 <a href="#" class="circle">
                     <div class="circle-content circle-front">
                         <img src="assets/images/carta-del/gray-1.png" alt="image" />
@@ -233,10 +233,6 @@
         </div>
     </footer>
 
-
-    <!-- Lightbox JS -->
-    <script type="text/javascript " src="assets/js/lightgallery.min.js"></script>
-    <script type="text/javascript " src="assets/js/video.js"></script>
 
     <!-- Swiper JS -->
     <script type="text/javascript" src="assets/js/swiper.js"></script>
