--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <!-- Scroll section -->
     <section class="scroll-section">
-        <marquee class="marquee text-primary" behavior="scroll" direction="left" scrollamount="24">
+        <div class="marquee text-primary">
             <span>Siempre sustentables</span>
             <span class="dot">•</span>
             <span>Siempre sustentables</span>
@@ -118,21 +118,27 @@
             <span>Siempre sustentables</span>
             <span class="dot">•</span>
             <span>Siempre sustentables</span>
-        </marquee>
+            <span class="dot">•</span>
+            <span>Siempre sustentables</span>
+            <span class="dot">•</span>
+            <span>Siempre sustentables</span>
+            <span class="dot">•</span>
+            <span>Siempre sustentables</span>
+        </div>
     </section>
 
     <!-- Letter Section -->
     <section class="letter-section">
         <div class="container">
             <div class="letter-content">
-                <div class="letter-header">
+                <div class="letter-header fade-in-up">
                     <img src="assets/images/home/person-1.png" alt="image" />
                     <span>Carta Gerente General Corporativo</span>
                 </div>
-                <div class="letter-body">
+                <div class="letter-body fade-in-up">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat dore aretar.
                 </div>
-                <div class="letter-footer">
+                <div class="letter-footer fade-in-up">
                     <button class="btn btn-primary btn-lg">Leer la Carta</button>
                     <button class="btn btn-white btn-lg">Descargar PDF</button>
                 </div>
@@ -142,19 +148,12 @@
 
     <!-- Video Section -->
     <section class="video-section">
+        <div class="video-section-bg reveal-up"></div>
         <div class="container">
             <div class="video-content">
-                <button class="play-button" id="playButton">
-                    <img src="assets/images/svg/video-play.svg" alt="play"/>
-                </button>
-                <div class="video-gallery">
-                    <a data-lg-size="1280-800" data-src="//www.youtube.com/watch?v=egyIeygdS_E " data-poster="assets/images/home/video-poster.png">
-                        <img id="video" width="1280" height="860" src="assets/images/home/video-poster.png" />
-                    </a>
-                </div>
+                <iframe class="slide-down" src="https://player.vimeo.com/video/688981143?h=9655bf0994" width="1280" height="720" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
-        <div class="video-section-bg scaleY reveal-up"></div>
     </section>
 
 
@@ -167,12 +166,12 @@
                     <div class="swiper-slide">
                         <div class="stats-content">
                             <div>
-                                <h2 class="text-primary">34</h2>
+                                <h2 class="text-primary counts" data-number="34">0</h2>
                                 <h4 class="text-primary">Loren ipsum dolor sit mater admira</h4>
                                 <h5>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</h5>
                             </div>
                             <div>
-                                <h2>26.000</h2>
+                                <h2><span class="counts" data-number="26"></span>.000</h2>
                                 <h4>Loren ipsum dolor sit mater admira</h4>
                                 <h5>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</h5>
                             </div>
@@ -216,7 +215,7 @@
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
             </div>
-            <div class="stats-bars">
+            <div class="stats-bars fade-in-up">
                 <img src="assets/images/svg/bars.svg" alt="icon" />
             </div>
             <div class="stats-button">
@@ -234,13 +233,13 @@
         <div class="container">
             <div class="flex-content">
                 <div class="flex-image">
-                    <img class="img-cover" src="assets/images/home/shop.png" alt="image" />
+                    <img class="img-cover circle-reveal" src="assets/images/home/shop.png" alt="image" />
                 </div>
                 <div class="flex-text" style="max-width: 735px;">
-                    <h6 class="text-alt">loren ipsum</h6>
-                    <h3 class="text-primary">Estrategia de Sostenibilidad</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat dore aretar.</p>
-                    <div class="flex-buttons">
+                    <h6 class="text-alt fade-in-up">loren ipsum</h6>
+                    <h3 class="text-primary fade-in-up">Estrategia de Sostenibilidad</h3>
+                    <p class="fade-in-up">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat dore aretar.</p>
+                    <div class="flex-buttons fade-in-up">
                         <button class="btn btn-primary btn-lg">Saber Más</button>
                         <button class="btn btn-white btn-lg">Descargar PDF</button>
                     </div>
@@ -251,23 +250,23 @@
 
     <!-- People Section -->
     <div class="people-section">
+        <div class="people-section-bg reveal-up"></div>
         <div class="container">
             <div class="flex-content">
                 <div class="flex-text" style="max-width: 735px;">
-                    <h6 class="text-alt">loren ipsum</h6>
-                    <h3 class="text-primary">Nuestra Gente</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat dore aretar.</p>
-                    <div class="flex-buttons">
+                    <h6 class="text-alt fade-in-up">loren ipsum</h6>
+                    <h3 class="text-primary fade-in-up">Nuestra Gente</h3>
+                    <p class="fade-in-up">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat dore aretar.</p>
+                    <div class="flex-buttons fade-in-up">
                         <button class="btn btn-primary btn-lg">Saber Más</button>
                         <button class="btn btn-alt-outline btn-lg">Descargar PDF</button>
                     </div>
                 </div>
                 <div class="flex-image">
-                    <img class="img-cover" src="assets/images/home/women.png" alt="image" />
+                    <img class="img-cover circle-reveal" src="assets/images/home/women.png" alt="image" />
                 </div>
             </div>
         </div>
-        <div class="people-section-bg scaleY reveal-up"></div>
     </div>
 
 
@@ -276,13 +275,13 @@
         <div class="container">
             <div class="flex-content">
                 <div class="flex-image">
-                    <img class="img-cover" src="assets/images/home/innovation.png" alt="image" />
+                    <img class="img-cover circle-reveal" src="assets/images/home/innovation.png" alt="image" />
                 </div>
                 <div class="flex-text" style="max-width: 735px;">
-                    <h6 class="text-alt">loren ipsum</h6>
-                    <h3 class="text-alt">Innovación en Servicio</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat dore aretar.</p>
-                    <div class="flex-buttons">
+                    <h6 class="text-alt fade-in-up">loren ipsum</h6>
+                    <h3 class="text-alt fade-in-up">Innovación en Servicio</h3>
+                    <p class="fade-in-up">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat dore aretar.</p>
+                    <div class="flex-buttons fade-in-up">
                         <button class="btn btn-primary btn-lg">Saber Más</button>
                         <button class="btn btn-white btn-lg">Descargar PDF</button>
                     </div>
@@ -293,7 +292,7 @@
 
     <!-- Scroll background section -->
     <section class="scroll-bg-section bg-primary">
-        <marquee class="marquee text-white" behavior="scroll" direction="left" scrollamount="24">
+        <div class="marquee text-white">
             <span>Siempre sustentables</span>
             <span class="dot">•</span>
             <span>Siempre sustentables</span>
@@ -303,9 +302,15 @@
             <span>Siempre sustentables</span>
             <span class="dot">•</span>
             <span>Siempre sustentables</span>
-        </marquee>
+            <span class="dot">•</span>
+            <span>Siempre sustentables</span>
+            <span class="dot">•</span>
+            <span>Siempre sustentables</span>
+            <span class="dot">•</span>
+            <span>Siempre sustentables</span>
+        </div>
         <div class="qoute-icon">
-            <img src="assets/images/svg/qoute.png" alt="icon" />
+            <img class="fade-in-down" src="assets/images/svg/qoute.png" alt="icon" />
         </div>
     </section>
 
@@ -359,10 +364,9 @@
         </div>
     </footer>
 
+    <!-- 
 
-    <!-- Lightbox JS -->
-    <script type="text/javascript " src="assets/js/lightgallery.min.js"></script>
-    <script type="text/javascript " src="assets/js/video.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> -->
 
     <!-- Swiper JS -->
     <script type="text/javascript" src="assets/js/swiper.js"></script>
