--- a/nuestra-gente.html
+++ b/nuestra-gente.html
@@ -65,8 +65,8 @@
     <section class="strategy-section ">
         <div class="container">
             <div class="strategy-content">
-                <h2 class="text-secondary">Diversidad e Inclusión</h2>
-                <h3 class="text-alt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat dore aretar.</h3>
+                <h2 class="text-secondary fade-in-up">Diversidad e Inclusión</h2>
+                <h3 class="text-alt fade-in-up">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat dore aretar.</h3>
             </div>
         </div>
     </section>
@@ -74,7 +74,7 @@
     <!-- Round Slider Section -->
     <section class="round-slider-section">
         <div class="container">
-            <div class="round-slider-wrapper">
+            <div class="round-slider-wrapper fade-in-up">
                 <div thumbsSlider="" class="swiper round-swiper-link" id="roundLinkSwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
@@ -240,12 +240,12 @@
                     <div class="swiper-slide">
                         <div class="stats-content">
                             <div>
-                                <h2 class="text-primary">34</h2>
+                                <h2 class="text-primary counts" data-number="34">34</h2>
                                 <h4 class="text-primary">Loren ipsum dolor sit mater admira</h4>
                                 <h5>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</h5>
                             </div>
                             <div>
-                                <h2>26.000</h2>
+                                <h2><span class="counts" data-number="26"></span>.000</h2>
                                 <h4>Loren ipsum dolor sit mater admira</h4>
                                 <h5>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</h5>
                             </div>
@@ -253,7 +253,7 @@
                     </div>
                 </div>
             </div>
-            <div class="stats-bars">
+            <div class="stats-bars fade-in-up">
                 <img src="assets/images/svg/bars.svg" alt="icon" />
             </div>
         </div>
@@ -263,8 +263,8 @@
     <section class="strategy-section bg-primary spacer-y">
         <div class="container">
             <div class="strategy-content">
-                <h2 class="text-white">Nuestro Objetivo</h2>
-                <h3 class="text-secondary">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat dore aretar.</h3>
+                <h2 class="text-white fade-in-up">Nuestro Objetivo</h2>
+                <h3 class="text-secondary fade-in-up">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat dore aretar.</h3>
             </div>
         </div>
     </section>
@@ -273,8 +273,8 @@
     <section class="tabs-section">
         <div class="container gutter-xs-0">
             <div class="tabs-top">
-                <h2>Loren Ipsum Dolor</h2>
-                <div class="tabs">
+                <h2 class="fade-in-up">Loren Ipsum Dolor</h2>
+                <div class="tabs fade-in-up">
                     <a data-tab="one" class="tab-link active" href="javascript:;">nuestros colaboradores</a>
                     <a data-tab="two" class="tab-link" href="javascript:;">Crecimiento Profesional</a>
                     <a data-tab="three" class="tab-link" href="javascript:;">Talento interno</a>
@@ -286,13 +286,13 @@
         <div class="container">
             <div class="tabs-bottom">
                 <div id="one" class="tab-content active">
-                    <div>
+                    <div class="fade-in-up">
                         <h3>Crecimiento Profesional</h3>
                         <p>Lorem ipsum dolor sit ametctetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpa dore aretar marerer. Lorem ipsum dolor sit ametctetuer adipiscing elit, sed diam nonummy nibh
                             euismod tincidunt ut laoreet dolore magna aliquam erat volutpa dore aretar marerer.</p>
                         <p>Lorem ipsum dolor sit ametctetuer adipiscing tincidunt ut laoreet dolore magna aliquam erat volutpa dore aretar marerer.</p>
                     </div>
-                    <img src="assets/images/gente/tab-1.png" alt="image" />
+                    <img class="fade-in-up" src="assets/images/gente/tab-1.png" alt="image" />
                 </div>
                 <div id="two" class="tab-content">
                     <div>
@@ -342,12 +342,12 @@
         <div class="container">
             <div class="stats-light-content">
                 <div>
-                    <h2 class="text-primary">34</h2>
+                    <h2 class="text-primary counts" data-number="34">34</h2>
                     <h4 class="text-primary">Loren ipsum dolor sit mater admira</h4>
                     <h5>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</h5>
                 </div>
                 <div>
-                    <h2 class="text-secondary">26.000</h2>
+                    <h2 class="text-secondary"><span class="counts" data-number="26"></span>.000</h2>
                     <h4 class="text-secondary">Loren ipsum dolor sit mater admira</h4>
                     <h5>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</h5>
                 </div>
@@ -419,10 +419,6 @@
         </div>
     </footer>
 
-
-    <!-- Lightbox JS -->
-    <script type="text/javascript " src="assets/js/lightgallery.min.js"></script>
-    <script type="text/javascript " src="assets/js/video.js"></script>
 
     <!-- Swiper JS -->
     <script type="text/javascript" src="assets/js/swiper.js"></script>
