--- a/somos-falabella.html
+++ b/somos-falabella.html
@@ -62,8 +62,8 @@
     <section class="strategy-section ">
         <div class="container">
             <div class="strategy-content">
-                <h2 class="text-primary">Estrategia de Sostenibilidad</h2>
-                <h3>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat dore aretar.</h3>
+                <h2 class="text-primary fade-in-up">Estrategia de Sostenibilidad</h2>
+                <h3 class="fade-in-up">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat dore aretar.</h3>
             </div>
         </div>
     </section>
@@ -76,8 +76,8 @@
                     <!-- Slides -->
                     <div class="swiper-slide">
                         <div class="integrity-content">
-                            <img src="assets/images/svg/target.svg" alt="image" />
-                            <div>
+                            <img class="fade-in-up" src="assets/images/svg/target.svg" alt="image" />
+                            <div class="fade-in-up">
                                 <h4>Pasión por la Integridad</h4>
                                 <p>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
                                     lobortis nisl ut aliquip ex ea commodo consequat.</p>
@@ -145,12 +145,12 @@
                     <div class="swiper-slide">
                         <div class="stats-content">
                             <div>
-                                <h2 class="text-primary">34</h2>
+                                <h2 class="text-primary counts" data-number="34">34</h2>
                                 <h4 class="text-primary">Loren ipsum dolor sit mater admira</h4>
                                 <h5>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</h5>
                             </div>
                             <div>
-                                <h2>26.000</h2>
+                                <h2><span class="counts" data-number="26"></span>.000</h2>
                                 <h4>Loren ipsum dolor sit mater admira</h4>
                                 <h5>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</h5>
                             </div>
@@ -158,7 +158,7 @@
                     </div>
                 </div>
             </div>
-            <div class="stats-bars">
+            <div class="stats-bars fade-in-up">
                 <img src="assets/images/svg/bars.svg" alt="icon" />
             </div>
         </div>
@@ -168,15 +168,15 @@
     <section class="strategy-section bg-secondary spacer-y">
         <div class="container">
             <div class="strategy-content">
-                <h2 class="text-primary">Estrategia de Sostenibilidad</h2>
-                <h3 class="text-white">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat dore aretar.</h3>
+                <h2 class="text-primary fade-in-up">Estrategia de Sostenibilidad</h2>
+                <h3 class="text-white fade-in-up">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat dore aretar.</h3>
             </div>
         </div>
     </section>
 
     <!-- Scroll background section -->
     <section class="scroll-bg-section bg-secondary">
-        <marquee class="marquee text-white" behavior="scroll" direction="left" scrollamount="24">
+        <div class="marquee text-white">
             <span>Siempre sustentables</span>
             <span class="dot">•</span>
             <span>Siempre sustentables</span>
@@ -186,9 +186,15 @@
             <span>Siempre sustentables</span>
             <span class="dot">•</span>
             <span>Siempre sustentables</span>
-        </marquee>
+            <span class="dot">•</span>
+            <span>Siempre sustentables</span>
+            <span class="dot">•</span>
+            <span>Siempre sustentables</span>
+            <span class="dot">•</span>
+            <span>Siempre sustentables</span>
+        </div>
         <div class="qoute-icon">
-            <img src="assets/images/svg/qoute-light.svg" alt="icon" />
+            <img class="fade-in-down" src="assets/images/svg/qoute-light.svg" alt="icon" />
         </div>
     </section>
 
@@ -257,10 +263,6 @@
         </div>
     </footer>
 
-
-    <!-- Lightbox JS -->
-    <script type="text/javascript " src="assets/js/lightgallery.min.js"></script>
-    <script type="text/javascript " src="assets/js/video.js"></script>
 
     <!-- Swiper JS -->
     <script type="text/javascript" src="assets/js/swiper.js"></script>
