--- a/carta-gerente-general.html
+++ b/carta-gerente-general.html
@@ -31,13 +31,13 @@
                 </button>
                 <div id="nav-menu" class="side-menu">
                     <ul class="navbar">
-                        <li><a href="#">Carta Gerente General</a></li>
+                        <li><a class="active" href="carta-gerente-general.html">Carta Gerente General</a></li>
                         <li><a href="#">Cifras</a></li>
-                        <li><a href="#">Estrategia</a></li>
+                        <li><a href="estrategia.html">Estrategia</a></li>
                         <li><a href="#">Innovación</a></li>
                         <li><a href="#">+Verde</a></li>
                         <li><a href="#">Inversión Social</a></li>
-                        <li><a href="#">Nuestra Gente</a></li>
+                        <li><a href="nuestra-gente.html">Nuestra Gente</a></li>
                     </ul>
                     <button id="nav-close" class="btn-close">
                         <img src="assets/images/svg/menu-close.svg" alt="icon"/>
@@ -196,15 +196,15 @@
                     <h6 class="font-black">Sobre este Reporte</h6>
                     <div class="footer-rows font-bold">
                         <ul>
-                            <li><a href="#">Carta Gerente General </a></li>
+                            <li><a href="carta-gerente-general.html">Carta Gerente General </a></li>
                             <li><a href="#">Cifras</a></li>
-                            <li><a href="#">Estrategia</a></li>
+                            <li><a href="estrategia.html">Estrategia</a></li>
                             <li><a href="#">Innovación</a></li>
                         </ul>
                         <ul class="footer-item-rows">
                             <li><a href="#">+Verde</a></li>
                             <li><a href="#">Inversión Social</a></li>
-                            <li><a href="#">Nuestra Gente</a></li>
+                            <li><a href="nuestra-gente.html">Nuestra Gente</a></li>
                         </ul>
                     </div>
                 </div>
