--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <!-- Slides -->
                 <div class="swiper-slide">
                     <div class="banner-slide">
-                        <img src="assets/images/home/slide-1.png" alt="banner" />
+                        <img class="animate-zoomout" src="assets/images/home/slide-1.png" alt="banner" />
                         <div class="banner-wrapper">
                             <div class="container h-100">
                                 <div class="banner-text">
