Counter anim + 4 slides + 3slides

--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@
                     <div class="swiper-slide">
                         <div class="stats-content">
                             <div>
-                                <h2 class="text-primary">34</h2>
+                                <h2 class="text-primary">+<span class="counts-slide-2" data-number="29"></span> mil</h2>
                                 <h4 class="text-primary">Loren ipsum dolor sit mater admira</h4>
                                 <h5>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</h5>
                             </div>
                             <div>
-                                <h2>26.000</h2>
+                                <h2><span class="counts-slide-2" data-number="67"></span>%</h2>
                                 <h4>Loren ipsum dolor sit mater admira</h4>
                                 <h5>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</h5>
                             </div>
@@ -195,12 +195,12 @@
                     <div class="swiper-slide">
                         <div class="stats-content">
                             <div>
-                                <h2 class="text-primary">34</h2>
+                                <h2 class="text-primary">+<span class="counts-slide-3" data-number="16"></span>,<span class="counts-slide-3" data-number="3"></span></h2>
                                 <h4 class="text-primary">Loren ipsum dolor sit mater admira</h4>
                                 <h5>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</h5>
                             </div>
                             <div>
-                                <h2>26.000</h2>
+                                <h2><span class="counts-slide-3" data-number="60"></span></h2>
                                 <h4>Loren ipsum dolor sit mater admira</h4>
                                 <h5>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</h5>
                             </div>
